site/docs/3.4.2/api/python/_sources/user_guide/pandas_on_spark/supported_pandas_api.rst.txt

=====================
Supported pandas API
=====================

.. currentmodule:: pyspark.pandas

The following table shows the pandas APIs that implemented or non-implemented from pandas API on
Spark. Some pandas API do not implement full parameters, so the third column shows missing
parameters for each API.

* 'Y' in the second column means it's implemented including its whole parameter.
* 'N' means it's not implemented yet.
* 'P' means it's partially implemented with the missing of some parameters.

All API in the list below computes the data with distributed execution except the ones that require
the local execution by design. For example, `DataFrame.to_numpy() <https://spark.apache.org/docs/
latest/api/python/reference/pyspark.pandas/api/pyspark.pandas.DataFrame.to_numpy.html>`__
requires to collect the data to the driver side.

If there is non-implemented pandas API or parameter you want, you can create an `Apache Spark
JIRA <https://issues.apache.org/jira/projects/SPARK/summary>`__ to request or to contribute by
your own.

The API list is updated based on the pandas 2.0.0 pre-release.

CategoricalIndex API
----------------------------------------------------------------------------------------------------
.. currentmodule:: pyspark.pandas.CategoricalIndex

.. list-table::
    :header-rows: 1

    * - API
      - Implemented
      - Missing parameters
    * - :func:`add_categories`
      - Y
      - 
    * - :func:`all`
      - Y
      - 
    * - :func:`any`
      - Y
      - 
    * - :func:`append`
      - Y
      - 
    * - :func:`argmax`
      - P
      - ``axis`` , ``skipna``
    * - :func:`argmin`
      - P
      - ``axis`` , ``skipna``
    * - argsort
      - N
      - 
    * - :func:`as_ordered`
      - Y
      - 
    * - :func:`as_unordered`
      - Y
      - 
    * - :func:`asof`
      - Y
      - 
    * - asof_locs
      - N
      - 
    * - :func:`astype`
      - P
      - ``copy``
    * - :func:`copy`
      - P
      - ``dtype`` , ``names``
    * - :func:`delete`
      - Y
      - 
    * - :func:`difference`
      - Y
      - 
    * - :func:`drop`
      - P
      - ``errors``
    * - :func:`drop_duplicates`
      - Y
      - 
    * - :func:`droplevel`
      - Y
      - 
    * - :func:`dropna`
      - Y
      - 
    * - duplicated
      - N
      - 
    * - :func:`equals`
      - Y
      - 
    * - :func:`factorize`
      - P
      - ``use_na_sentinel``
    * - :func:`fillna`
      - P
      - ``downcast``
    * - format
      - N
      - 
    * - get_indexer
      - N
      - 
    * - get_indexer_for
      - N
      - 
    * - get_indexer_non_unique
      - N
      - 
    * - :func:`get_level_values`
      - Y
      - 
    * - get_loc
      - N
      - 
    * - get_slice_bound
      - N
      - 
    * - get_value
      - N
      - 
    * - groupby
      - N
      - 
    * - :func:`holds_integer`
      - Y
      - 
    * - :func:`identical`
      - Y
      - 
    * - :func:`insert`
      - Y
      - 
    * - :func:`intersection`
      - P
      - ``sort``
    * - is\_
      - N
      - 
    * - :func:`is_boolean`
      - Y
      - 
    * - :func:`is_categorical`
      - Y
      - 
    * - is_dtype_equal
      - N
      - 
    * - :func:`is_floating`
      - Y
      - 
    * - :func:`is_integer`
      - Y
      - 
    * - :func:`is_interval`
      - Y
      - 
    * - is_mixed
      - N
      - 
    * - :func:`is_numeric`
      - Y
      - 
    * - :func:`is_object`
      - Y
      - 
    * - :func:`is_type_compatible`
      - Y
      - 
    * - :func:`isin`
      - P
      - ``level``
    * - :func:`isna`
      - Y
      - 
    * - :func:`isnull`
      - Y
      - 
    * - :func:`item`
      - Y
      - 
    * - join
      - N
      - 
    * - :func:`map`
      - Y
      - 
    * - :func:`max`
      - Y
      - 
    * - memory_usage
      - N
      - 
    * - :func:`min`
      - Y
      - 
    * - :func:`notna`
      - Y
      - 
    * - :func:`notnull`
      - Y
      - 
    * - :func:`nunique`
      - Y
      - 
    * - putmask
      - N
      - 
    * - ravel
      - N
      - 
    * - reindex
      - N
      - 
    * - :func:`remove_categories`
      - Y
      - 
    * - :func:`remove_unused_categories`
      - Y
      - 
    * - :func:`rename`
      - Y
      - 
    * - :func:`rename_categories`
      - Y
      - 
    * - :func:`reorder_categories`
      - Y
      - 
    * - :func:`repeat`
      - P
      - ``axis``
    * - searchsorted
      - N
      - 
    * - :func:`set_categories`
      - Y
      - 
    * - :func:`set_names`
      - Y
      - 
    * - set_value
      - N
      - 
    * - :func:`shift`
      - P
      - ``freq``
    * - slice_indexer
      - N
      - 
    * - slice_locs
      - N
      - 
    * - :func:`sort`
      - Y
      - 
    * - :func:`sort_values`
      - P
      - ``key`` , ``na_position``
    * - sortlevel
      - N
      - 
    * - :func:`symmetric_difference`
      - Y
      - 
    * - :func:`take`
      - P
      - ``allow_fill`` , ``axis`` , ``fill_value``
    * - take_nd
      - N
      - 
    * - to_flat_index
      - N
      - 
    * - :func:`to_frame`
      - Y
      - 
    * - :func:`to_list`
      - Y
      - 
    * - to_native_types
      - N
      - 
    * - :func:`to_numpy`
      - P
      - ``na_value``
    * - :func:`to_series`
      - P
      - ``index``
    * - :func:`tolist`
      - Y
      - 
    * - :func:`transpose`
      - Y
      - 
    * - :func:`union`
      - Y
      - 
    * - :func:`unique`
      - Y
      - 
    * - :func:`value_counts`
      - Y
      - 
    * - :func:`view`
      - Y
      - 
    * - where
      - N
      - 

DataFrame API
----------------------------------------------------------------------------------------------------
.. currentmodule:: pyspark.pandas.DataFrame

.. list-table::
    :header-rows: 1

    * - API
      - Implemented
      - Missing parameters
    * - :func:`abs`
      - Y
      - 
    * - :func:`add`
      - P
      - ``axis`` , ``fill_value`` , ``level``
    * - :func:`add_prefix`
      - Y
      - 
    * - :func:`add_suffix`
      - Y
      - 
    * - :func:`agg`
      - P
      - ``axis``
    * - :func:`aggregate`
      - P
      - ``axis``
    * - :func:`align`
      - P
      - ``broadcast_axis`` , ``fill_axis`` , ``fill_value`` , ``level`` , ``limit`` and more. See the `pandas.DataFrame.align <https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.align.html>`__ and `pyspark.pandas.DataFrame.align <https://spark.apache.org/docs/latest/api/python/reference/pyspark.pandas/api/pyspark.pandas.DataFrame.align.html>`__ for detail.
    * - :func:`all`
      - P
      - ``level``
    * - :func:`any`
      - P
      - ``level`` , ``skipna``
    * - :func:`append`
      - Y
      - 
    * - :func:`apply`
      - P
      - ``raw`` , ``result_type``
    * - :func:`applymap`
      - P
      - ``na_action``
    * - asfreq
      - N
      - 
    * - asof
      - N
      - 
    * - :func:`assign`
      - Y
      - 
    * - :func:`astype`
      - P
      - ``copy`` , ``errors``
    * - :func:`at_time`
      - Y
      - 
    * - :func:`backfill`
      - P
      - ``downcast``
    * - :func:`between_time`
      - P
      - ``inclusive``
    * - :func:`bfill`
      - P
      - ``downcast``
    * - :func:`bool`
      - Y
      - 
    * - :func:`boxplot`
      - P
      - ``ax`` , ``backend`` , ``by`` , ``column`` , ``figsize`` and more. See the `pandas.DataFrame.boxplot <https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.boxplot.html>`__ and `pyspark.pandas.DataFrame.boxplot <https://spark.apache.org/docs/latest/api/python/reference/pyspark.pandas/api/pyspark.pandas.DataFrame.boxplot.html>`__ for detail.
    * - :func:`clip`
      - P
      - ``axis`` , ``inplace``
    * - combine
      - N
      - 
    * - :func:`combine_first`
      - Y
      - 
    * - compare
      - N
      - 
    * - convert_dtypes
      - N
      - 
    * - :func:`copy`
      - Y
      - 
    * - :func:`corr`
      - P
      - ``numeric_only``
    * - :func:`corrwith`
      - P
      - ``numeric_only``
    * - :func:`count`
      - P
      - ``level``
    * - :func:`cov`
      - P
      - ``numeric_only``
    * - :func:`cummax`
      - P
      - ``axis``
    * - :func:`cummin`
      - P
      - ``axis``
    * - :func:`cumprod`
      - P
      - ``axis``
    * - :func:`cumsum`
      - P
      - ``axis``
    * - :func:`describe`
      - P
      - ``datetime_is_numeric`` , ``exclude`` , ``include``
    * - :func:`diff`
      - Y
      - 
    * - :func:`div`
      - P
      - ``axis`` , ``fill_value`` , ``level``
    * - :func:`divide`
      - P
      - ``axis`` , ``fill_value`` , ``level``
    * - :func:`dot`
      - Y
      - 
    * - :func:`drop`
      - P
      - ``errors`` , ``inplace`` , ``level``
    * - :func:`drop_duplicates`
      - Y
      - 
    * - :func:`droplevel`
      - Y
      - 
    * - :func:`dropna`
      - Y
      - 
    * - :func:`duplicated`
      - Y
      - 
    * - :func:`eq`
      - P
      - ``axis`` , ``level``
    * - :func:`equals`
      - Y
      - 
    * - :func:`eval`
      - Y
      - 
    * - :func:`ewm`
      - P
      - ``adjust`` , ``axis`` , ``method`` , ``times``
    * - :func:`expanding`
      - P
      - ``axis`` , ``center`` , ``method``
    * - :func:`explode`
      - Y
      - 
    * - :func:`ffill`
      - P
      - ``downcast``
    * - :func:`fillna`
      - P
      - ``downcast``
    * - :func:`filter`
      - Y
      - 
    * - :func:`first`
      - Y
      - 
    * - :func:`first_valid_index`
      - Y
      - 
    * - :func:`floordiv`
      - P
      - ``axis`` , ``fill_value`` , ``level``
    * - :func:`ge`
      - P
      - ``axis`` , ``level``
    * - :func:`get`
      - Y
      - 
    * - :func:`groupby`
      - P
      - ``group_keys`` , ``level`` , ``observed`` , ``sort`` , ``squeeze``
    * - :func:`gt`
      - P
      - ``axis`` , ``level``
    * - :func:`head`
      - Y
      - 
    * - :func:`hist`
      - P
      - ``ax`` , ``backend`` , ``by`` , ``column`` , ``data`` and more. See the `pandas.DataFrame.hist <https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.hist.html>`__ and `pyspark.pandas.DataFrame.hist <https://spark.apache.org/docs/latest/api/python/reference/pyspark.pandas/api/pyspark.pandas.DataFrame.hist.html>`__ for detail.
    * - :func:`idxmax`
      - P
      - ``numeric_only`` , ``skipna``
    * - :func:`idxmin`
      - P
      - ``numeric_only`` , ``skipna``
    * - infer_objects
      - N
      - 
    * - :func:`info`
      - P
      - ``memory_usage`` , ``show_counts``
    * - :func:`insert`
      - Y
      - 
    * - :func:`interpolate`
      - P
      - ``axis`` , ``downcast`` , ``inplace``
    * - isetitem
      - N
      - 
    * - :func:`isin`
      - Y
      - 
    * - :func:`isna`
      - Y
      - 
    * - :func:`isnull`
      - Y
      - 
    * - :func:`items`
      - Y
      - 
    * - :func:`iteritems`
      - Y
      - 
    * - :func:`iterrows`
      - Y
      - 
    * - :func:`itertuples`
      - Y
      - 
    * - :func:`join`
      - P
      - ``other`` , ``sort`` , ``validate``
    * - :func:`keys`
      - Y
      - 
    * - :func:`kurt`
      - P
      - ``level``
    * - :func:`kurtosis`
      - P
      - ``level``
    * - :func:`last`
      - Y
      - 
    * - :func:`last_valid_index`
      - Y
      - 
    * - :func:`le`
      - P
      - ``axis`` , ``level``
    * - lookup
      - N
      - 
    * - :func:`lt`
      - P
      - ``axis`` , ``level``
    * - :func:`mad`
      - P
      - ``level`` , ``skipna``
    * - :func:`mask`
      - P
      - ``axis`` , ``errors`` , ``inplace`` , ``level`` , ``try_cast``
    * - :func:`max`
      - P
      - ``level``
    * - :func:`mean`
      - P
      - ``level``
    * - :func:`median`
      - P
      - ``level``
    * - :func:`melt`
      - P
      - ``col_level`` , ``ignore_index``
    * - memory_usage
      - N
      - 
    * - :func:`merge`
      - P
      - ``copy`` , ``indicator`` , ``sort`` , ``validate``
    * - :func:`min`
      - P
      - ``level``
    * - :func:`mod`
      - P
      - ``axis`` , ``fill_value`` , ``level``
    * - :func:`mode`
      - Y
      - 
    * - :func:`mul`
      - P
      - ``axis`` , ``fill_value`` , ``level``
    * - :func:`multiply`
      - P
      - ``axis`` , ``fill_value`` , ``level``
    * - :func:`ne`
      - P
      - ``axis`` , ``level``
    * - :func:`nlargest`
      - Y
      - 
    * - :func:`notna`
      - Y
      - 
    * - :func:`notnull`
      - Y
      - 
    * - :func:`nsmallest`
      - Y
      - 
    * - :func:`nunique`
      - Y
      - 
    * - :func:`pad`
      - P
      - ``downcast``
    * - :func:`pct_change`
      - P
      - ``fill_method`` , ``freq`` , ``limit``
    * - :func:`pipe`
      - Y
      - 
    * - :func:`pivot`
      - Y
      - 
    * - :func:`pivot_table`
      - P
      - ``dropna`` , ``margins`` , ``margins_name`` , ``observed`` , ``sort``
    * - :func:`pop`
      - Y
      - 
    * - :func:`pow`
      - P
      - ``axis`` , ``fill_value`` , ``level``
    * - :func:`prod`
      - P
      - ``level``
    * - :func:`product`
      - P
      - ``level``
    * - :func:`quantile`
      - P
      - ``interpolation`` , ``method``
    * - :func:`query`
      - Y
      - 
    * - :func:`radd`
      - P
      - ``axis`` , ``fill_value`` , ``level``
    * - :func:`rank`
      - P
      - ``axis`` , ``na_option`` , ``pct``
    * - :func:`rdiv`
      - P
      - ``axis`` , ``fill_value`` , ``level``
    * - :func:`reindex`
      - P
      - ``level`` , ``limit`` , ``method`` , ``tolerance``
    * - :func:`reindex_like`
      - P
      - ``limit`` , ``method`` , ``tolerance``
    * - :func:`rename`
      - P
      - ``copy``
    * - :func:`rename_axis`
      - Y
      - 
    * - reorder_levels
      - N
      - 
    * - :func:`replace`
      - Y
      - 
    * - :func:`resample`
      - P
      - ``axis`` , ``base`` , ``convention`` , ``group_keys`` , ``kind`` and more. See the `pandas.DataFrame.resample <https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.resample.html>`__ and `pyspark.pandas.DataFrame.resample <https://spark.apache.org/docs/latest/api/python/reference/pyspark.pandas/api/pyspark.pandas.DataFrame.resample.html>`__ for detail.
    * - :func:`reset_index`
      - P
      - ``allow_duplicates`` , ``names``
    * - :func:`rfloordiv`
      - P
      - ``axis`` , ``fill_value`` , ``level``
    * - :func:`rmod`
      - P
      - ``axis`` , ``fill_value`` , ``level``
    * - :func:`rmul`
      - P
      - ``axis`` , ``fill_value`` , ``level``
    * - :func:`rolling`
      - P
      - ``axis`` , ``center`` , ``closed`` , ``method`` , ``on`` and more. See the `pandas.DataFrame.rolling <https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.rolling.html>`__ and `pyspark.pandas.DataFrame.rolling <https://spark.apache.org/docs/latest/api/python/reference/pyspark.pandas/api/pyspark.pandas.DataFrame.rolling.html>`__ for detail.
    * - :func:`round`
      - Y
      - 
    * - :func:`rpow`
      - P
      - ``axis`` , ``fill_value`` , ``level``
    * - :func:`rsub`
      - P
      - ``axis`` , ``fill_value`` , ``level``
    * - :func:`rtruediv`
      - P
      - ``axis`` , ``fill_value`` , ``level``
    * - :func:`sample`
      - P
      - ``axis`` , ``weights``
    * - :func:`select_dtypes`
      - Y
      - 
    * - :func:`sem`
      - P
      - ``level``
    * - set_axis
      - N
      - 
    * - set_flags
      - N
      - 
    * - :func:`set_index`
      - P
      - ``verify_integrity``
    * - :func:`shift`
      - P
      - ``axis`` , ``freq``
    * - :func:`skew`
      - P
      - ``level``
    * - slice_shift
      - N
      - 
    * - :func:`sort_index`
      - P
      - ``key`` , ``sort_remaining``
    * - :func:`sort_values`
      - P
      - ``axis`` , ``key`` , ``kind``
    * - :func:`squeeze`
      - Y
      - 
    * - :func:`stack`
      - P
      - ``dropna`` , ``level``
    * - :func:`std`
      - P
      - ``level``
    * - :func:`sub`
      - P
      - ``axis`` , ``fill_value`` , ``level``
    * - :func:`subtract`
      - P
      - ``axis`` , ``fill_value`` , ``level``
    * - :func:`sum`
      - P
      - ``level``
    * - :func:`swapaxes`
      - P
      - ``axis1`` , ``axis2``
    * - :func:`swaplevel`
      - Y
      - 
    * - :func:`tail`
      - Y
      - 
    * - :func:`take`
      - P
      - ``is_copy``
    * - :func:`to_clipboard`
      - Y
      - 
    * - :func:`to_csv`
      - P
      - ``chunksize`` , ``compression`` , ``decimal`` , ``doublequote`` , ``encoding`` and more. See the `pandas.DataFrame.to_csv <https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.to_csv.html>`__ and `pyspark.pandas.DataFrame.to_csv <https://spark.apache.org/docs/latest/api/python/reference/pyspark.pandas/api/pyspark.pandas.DataFrame.to_csv.html>`__ for detail.
    * - :func:`to_dict`
      - Y
      - 
    * - :func:`to_excel`
      - P
      - ``storage_options``
    * - to_feather
      - N
      - 
    * - to_gbq
      - N
      - 
    * - to_hdf
      - N
      - 
    * - :func:`to_html`
      - P
      - ``encoding``
    * - :func:`to_json`
      - P
      - ``date_format`` , ``date_unit`` , ``default_handler`` , ``double_precision`` , ``force_ascii`` and more. See the `pandas.DataFrame.to_json <https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.to_json.html>`__ and `pyspark.pandas.DataFrame.to_json <https://spark.apache.org/docs/latest/api/python/reference/pyspark.pandas/api/pyspark.pandas.DataFrame.to_json.html>`__ for detail.
    * - :func:`to_latex`
      - P
      - ``caption`` , ``label`` , ``position``
    * - :func:`to_markdown`
      - P
      - ``index`` , ``storage_options``
    * - :func:`to_numpy`
      - P
      - ``copy`` , ``dtype`` , ``na_value``
    * - :func:`to_orc`
      - P
      - ``engine`` , ``engine_kwargs`` , ``index``
    * - :func:`to_parquet`
      - P
      - ``engine`` , ``index`` , ``storage_options``
    * - to_period
      - N
      - 
    * - to_pickle
      - N
      - 
    * - :func:`to_records`
      - Y
      - 
    * - to_sql
      - N
      - 
    * - to_stata
      - N
      - 
    * - :func:`to_string`
      - P
      - ``encoding`` , ``max_colwidth`` , ``min_rows``
    * - to_timestamp
      - N
      - 
    * - to_xarray
      - N
      - 
    * - to_xml
      - N
      - 
    * - :func:`transform`
      - Y
      - 
    * - :func:`transpose`
      - P
      - ``copy``
    * - :func:`truediv`
      - P
      - ``axis`` , ``fill_value`` , ``level``
    * - :func:`truncate`
      - Y
      - 
    * - tshift
      - N
      - 
    * - tz_convert
      - N
      - 
    * - tz_localize
      - N
      - 
    * - :func:`unstack`
      - P
      - ``fill_value`` , ``level``
    * - :func:`update`
      - P
      - ``errors`` , ``filter_func``
    * - value_counts
      - N
      - 
    * - :func:`var`
      - P
      - ``level`` , ``skipna``
    * - :func:`where`
      - P
      - ``errors`` , ``inplace`` , ``level`` , ``try_cast``
    * - :func:`xs`
      - P
      - ``drop_level``

DatetimeIndex API
----------------------------------------------------------------------------------------------------
.. currentmodule:: pyspark.pandas.DatetimeIndex

.. list-table::
    :header-rows: 1

    * - API
      - Implemented
      - Missing parameters
    * - :func:`all`
      - Y
      - 
    * - :func:`any`
      - Y
      - 
    * - :func:`append`
      - Y
      - 
    * - :func:`argmax`
      - P
      - ``axis`` , ``skipna``
    * - :func:`argmin`
      - P
      - ``axis`` , ``skipna``
    * - argsort
      - N
      - 
    * - :func:`asof`
      - Y
      - 
    * - asof_locs
      - N
      - 
    * - :func:`astype`
      - P
      - ``copy``
    * - :func:`ceil`
      - Y
      - 
    * - :func:`copy`
      - P
      - ``dtype`` , ``names``
    * - :func:`day_name`
      - Y
      - 
    * - :func:`delete`
      - Y
      - 
    * - :func:`difference`
      - Y
      - 
    * - :func:`drop`
      - P
      - ``errors``
    * - :func:`drop_duplicates`
      - Y
      - 
    * - :func:`droplevel`
      - Y
      - 
    * - :func:`dropna`
      - Y
      - 
    * - duplicated
      - N
      - 
    * - :func:`equals`
      - Y
      - 
    * - :func:`factorize`
      - P
      - ``use_na_sentinel``
    * - :func:`fillna`
      - P
      - ``downcast``
    * - :func:`floor`
      - Y
      - 
    * - format
      - N
      - 
    * - get_indexer
      - N
      - 
    * - get_indexer_for
      - N
      - 
    * - get_indexer_non_unique
      - N
      - 
    * - :func:`get_level_values`
      - Y
      - 
    * - get_loc
      - N
      - 
    * - get_slice_bound
      - N
      - 
    * - get_value
      - N
      - 
    * - groupby
      - N
      - 
    * - :func:`holds_integer`
      - Y
      - 
    * - :func:`identical`
      - Y
      - 
    * - :func:`indexer_at_time`
      - Y
      - 
    * - :func:`indexer_between_time`
      - Y
      - 
    * - :func:`insert`
      - Y
      - 
    * - :func:`intersection`
      - P
      - ``sort``
    * - is\_
      - N
      - 
    * - :func:`is_boolean`
      - Y
      - 
    * - :func:`is_categorical`
      - Y
      - 
    * - :func:`is_floating`
      - Y
      - 
    * - :func:`is_integer`
      - Y
      - 
    * - :func:`is_interval`
      - Y
      - 
    * - is_mixed
      - N
      - 
    * - :func:`is_numeric`
      - Y
      - 
    * - :func:`is_object`
      - Y
      - 
    * - :func:`is_type_compatible`
      - Y
      - 
    * - :func:`isin`
      - P
      - ``level``
    * - :func:`isna`
      - Y
      - 
    * - :func:`isnull`
      - Y
      - 
    * - isocalendar
      - N
      - 
    * - :func:`item`
      - Y
      - 
    * - join
      - N
      - 
    * - :func:`map`
      - Y
      - 
    * - :func:`max`
      - P
      - ``axis`` , ``skipna``
    * - mean
      - N
      - 
    * - memory_usage
      - N
      - 
    * - :func:`min`
      - P
      - ``axis`` , ``skipna``
    * - :func:`month_name`
      - Y
      - 
    * - :func:`normalize`
      - Y
      - 
    * - :func:`notna`
      - Y
      - 
    * - :func:`notnull`
      - Y
      - 
    * - :func:`nunique`
      - Y
      - 
    * - putmask
      - N
      - 
    * - ravel
      - N
      - 
    * - reindex
      - N
      - 
    * - :func:`rename`
      - Y
      - 
    * - :func:`repeat`
      - P
      - ``axis``
    * - :func:`round`
      - Y
      - 
    * - searchsorted
      - N
      - 
    * - :func:`set_names`
      - Y
      - 
    * - set_value
      - N
      - 
    * - :func:`shift`
      - P
      - ``freq``
    * - slice_indexer
      - N
      - 
    * - slice_locs
      - N
      - 
    * - snap
      - N
      - 
    * - :func:`sort`
      - Y
      - 
    * - :func:`sort_values`
      - P
      - ``key`` , ``na_position``
    * - sortlevel
      - N
      - 
    * - std
      - N
      - 
    * - :func:`strftime`
      - Y
      - 
    * - :func:`symmetric_difference`
      - Y
      - 
    * - :func:`take`
      - P
      - ``allow_fill`` , ``axis`` , ``fill_value``
    * - to_flat_index
      - N
      - 
    * - :func:`to_frame`
      - Y
      - 
    * - to_julian_date
      - N
      - 
    * - :func:`to_list`
      - Y
      - 
    * - to_native_types
      - N
      - 
    * - :func:`to_numpy`
      - P
      - ``na_value``
    * - to_period
      - N
      - 
    * - to_perioddelta
      - N
      - 
    * - to_pydatetime
      - N
      - 
    * - :func:`to_series`
      - P
      - ``index`` , ``keep_tz``
    * - :func:`tolist`
      - Y
      - 
    * - :func:`transpose`
      - Y
      - 
    * - tz_convert
      - N
      - 
    * - tz_localize
      - N
      - 
    * - :func:`union`
      - Y
      - 
    * - union_many
      - N
      - 
    * - :func:`unique`
      - Y
      - 
    * - :func:`value_counts`
      - Y
      - 
    * - :func:`view`
      - Y
      - 
    * - where
      - N
      - 

Float64Index API
----------------------------------------------------------------------------------------------------
.. currentmodule:: pyspark.pandas.Float64Index

.. list-table::
    :header-rows: 1

    * - API
      - Implemented
      - Missing parameters
    * - :func:`all`
      - Y
      - 
    * - :func:`any`
      - Y
      - 
    * - :func:`append`
      - Y
      - 
    * - :func:`argmax`
      - P
      - ``axis`` , ``skipna``
    * - :func:`argmin`
      - P
      - ``axis`` , ``skipna``
    * - argsort
      - N
      - 
    * - :func:`asof`
      - Y
      - 
    * - asof_locs
      - N
      - 
    * - :func:`astype`
      - P
      - ``copy``
    * - :func:`copy`
      - P
      - ``dtype`` , ``names``
    * - :func:`delete`
      - Y
      - 
    * - :func:`difference`
      - Y
      - 
    * - :func:`drop`
      - P
      - ``errors``
    * - :func:`drop_duplicates`
      - Y
      - 
    * - :func:`droplevel`
      - Y
      - 
    * - :func:`dropna`
      - Y
      - 
    * - duplicated
      - N
      - 
    * - :func:`equals`
      - Y
      - 
    * - :func:`factorize`
      - P
      - ``use_na_sentinel``
    * - :func:`fillna`
      - P
      - ``downcast``
    * - format
      - N
      - 
    * - get_indexer
      - N
      - 
    * - get_indexer_for
      - N
      - 
    * - get_indexer_non_unique
      - N
      - 
    * - :func:`get_level_values`
      - Y
      - 
    * - get_loc
      - N
      - 
    * - get_slice_bound
      - N
      - 
    * - get_value
      - N
      - 
    * - groupby
      - N
      - 
    * - :func:`holds_integer`
      - Y
      - 
    * - :func:`identical`
      - Y
      - 
    * - :func:`insert`
      - Y
      - 
    * - :func:`intersection`
      - P
      - ``sort``
    * - is\_
      - N
      - 
    * - :func:`is_boolean`
      - Y
      - 
    * - :func:`is_categorical`
      - Y
      - 
    * - :func:`is_floating`
      - Y
      - 
    * - :func:`is_integer`
      - Y
      - 
    * - :func:`is_interval`
      - Y
      - 
    * - is_mixed
      - N
      - 
    * - :func:`is_numeric`
      - Y
      - 
    * - :func:`is_object`
      - Y
      - 
    * - :func:`is_type_compatible`
      - Y
      - 
    * - :func:`isin`
      - P
      - ``level``
    * - :func:`isna`
      - Y
      - 
    * - :func:`isnull`
      - Y
      - 
    * - :func:`item`
      - Y
      - 
    * - join
      - N
      - 
    * - :func:`map`
      - Y
      - 
    * - :func:`max`
      - P
      - ``axis`` , ``skipna``
    * - memory_usage
      - N
      - 
    * - :func:`min`
      - P
      - ``axis`` , ``skipna``
    * - :func:`notna`
      - Y
      - 
    * - :func:`notnull`
      - Y
      - 
    * - :func:`nunique`
      - Y
      - 
    * - putmask
      - N
      - 
    * - ravel
      - N
      - 
    * - reindex
      - N
      - 
    * - :func:`rename`
      - Y
      - 
    * - :func:`repeat`
      - P
      - ``axis``
    * - searchsorted
      - N
      - 
    * - :func:`set_names`
      - Y
      - 
    * - set_value
      - N
      - 
    * - :func:`shift`
      - P
      - ``freq``
    * - slice_indexer
      - N
      - 
    * - slice_locs
      - N
      - 
    * - :func:`sort`
      - Y
      - 
    * - :func:`sort_values`
      - P
      - ``key`` , ``na_position``
    * - sortlevel
      - N
      - 
    * - :func:`symmetric_difference`
      - Y
      - 
    * - :func:`take`
      - P
      - ``allow_fill`` , ``axis`` , ``fill_value``
    * - to_flat_index
      - N
      - 
    * - :func:`to_frame`
      - Y
      - 
    * - :func:`to_list`
      - Y
      - 
    * - to_native_types
      - N
      - 
    * - :func:`to_numpy`
      - P
      - ``na_value``
    * - :func:`to_series`
      - P
      - ``index``
    * - :func:`tolist`
      - Y
      - 
    * - :func:`transpose`
      - Y
      - 
    * - :func:`union`
      - Y
      - 
    * - :func:`unique`
      - Y
      - 
    * - :func:`value_counts`
      - Y
      - 
    * - :func:`view`
      - Y
      - 
    * - where
      - N
      - 

Index API
----------------------------------------------------------------------------------------------------
.. currentmodule:: pyspark.pandas.Index

.. list-table::
    :header-rows: 1

    * - API
      - Implemented
      - Missing parameters
    * - :func:`all`
      - Y
      - 
    * - :func:`any`
      - Y
      - 
    * - :func:`append`
      - Y
      - 
    * - :func:`argmax`
      - P
      - ``axis`` , ``skipna``
    * - :func:`argmin`
      - P
      - ``axis`` , ``skipna``
    * - argsort
      - N
      - 
    * - :func:`asof`
      - Y
      - 
    * - asof_locs
      - N
      - 
    * - :func:`astype`
      - P
      - ``copy``
    * - :func:`copy`
      - P
      - ``dtype`` , ``names``
    * - :func:`delete`
      - Y
      - 
    * - :func:`difference`
      - Y
      - 
    * - :func:`drop`
      - P
      - ``errors``
    * - :func:`drop_duplicates`
      - Y
      - 
    * - :func:`droplevel`
      - Y
      - 
    * - :func:`dropna`
      - Y
      - 
    * - duplicated
      - N
      - 
    * - :func:`equals`
      - Y
      - 
    * - :func:`factorize`
      - P
      - ``use_na_sentinel``
    * - :func:`fillna`
      - P
      - ``downcast``
    * - format
      - N
      - 
    * - get_indexer
      - N
      - 
    * - get_indexer_for
      - N
      - 
    * - get_indexer_non_unique
      - N
      - 
    * - :func:`get_level_values`
      - Y
      - 
    * - get_loc
      - N
      - 
    * - get_slice_bound
      - N
      - 
    * - get_value
      - N
      - 
    * - groupby
      - N
      - 
    * - :func:`holds_integer`
      - Y
      - 
    * - :func:`identical`
      - Y
      - 
    * - :func:`insert`
      - Y
      - 
    * - :func:`intersection`
      - P
      - ``sort``
    * - is\_
      - N
      - 
    * - :func:`is_boolean`
      - Y
      - 
    * - :func:`is_categorical`
      - Y
      - 
    * - :func:`is_floating`
      - Y
      - 
    * - :func:`is_integer`
      - Y
      - 
    * - :func:`is_interval`
      - Y
      - 
    * - is_mixed
      - N
      - 
    * - :func:`is_numeric`
      - Y
      - 
    * - :func:`is_object`
      - Y
      - 
    * - :func:`is_type_compatible`
      - Y
      - 
    * - :func:`isin`
      - P
      - ``level``
    * - :func:`isna`
      - Y
      - 
    * - :func:`isnull`
      - Y
      - 
    * - :func:`item`
      - Y
      - 
    * - join
      - N
      - 
    * - :func:`map`
      - Y
      - 
    * - :func:`max`
      - P
      - ``axis`` , ``skipna``
    * - memory_usage
      - N
      - 
    * - :func:`min`
      - P
      - ``axis`` , ``skipna``
    * - :func:`notna`
      - Y
      - 
    * - :func:`notnull`
      - Y
      - 
    * - :func:`nunique`
      - Y
      - 
    * - putmask
      - N
      - 
    * - ravel
      - N
      - 
    * - reindex
      - N
      - 
    * - :func:`rename`
      - Y
      - 
    * - :func:`repeat`
      - P
      - ``axis``
    * - searchsorted
      - N
      - 
    * - :func:`set_names`
      - Y
      - 
    * - set_value
      - N
      - 
    * - :func:`shift`
      - P
      - ``freq``
    * - slice_indexer
      - N
      - 
    * - slice_locs
      - N
      - 
    * - :func:`sort`
      - Y
      - 
    * - :func:`sort_values`
      - P
      - ``key`` , ``na_position``
    * - sortlevel
      - N
      - 
    * - :func:`symmetric_difference`
      - Y
      - 
    * - :func:`take`
      - P
      - ``allow_fill`` , ``axis`` , ``fill_value``
    * - to_flat_index
      - N
      - 
    * - :func:`to_frame`
      - Y
      - 
    * - :func:`to_list`
      - Y
      - 
    * - to_native_types
      - N
      - 
    * - :func:`to_numpy`
      - P
      - ``na_value``
    * - :func:`to_series`
      - P
      - ``index``
    * - :func:`tolist`
      - Y
      - 
    * - :func:`transpose`
      - Y
      - 
    * - :func:`union`
      - Y
      - 
    * - :func:`unique`
      - Y
      - 
    * - :func:`value_counts`
      - Y
      - 
    * - :func:`view`
      - Y
      - 
    * - where
      - N
      - 

Int64Index API
----------------------------------------------------------------------------------------------------
.. currentmodule:: pyspark.pandas.Int64Index

.. list-table::
    :header-rows: 1

    * - API
      - Implemented
      - Missing parameters
    * - :func:`all`
      - Y
      - 
    * - :func:`any`
      - Y
      - 
    * - :func:`append`
      - Y
      - 
    * - :func:`argmax`
      - P
      - ``axis`` , ``skipna``
    * - :func:`argmin`
      - P
      - ``axis`` , ``skipna``
    * - argsort
      - N
      - 
    * - :func:`asof`
      - Y
      - 
    * - asof_locs
      - N
      - 
    * - :func:`astype`
      - P
      - ``copy``
    * - :func:`copy`
      - P
      - ``dtype`` , ``names``
    * - :func:`delete`
      - Y
      - 
    * - :func:`difference`
      - Y
      - 
    * - :func:`drop`
      - P
      - ``errors``
    * - :func:`drop_duplicates`
      - Y
      - 
    * - :func:`droplevel`
      - Y
      - 
    * - :func:`dropna`
      - Y
      - 
    * - duplicated
      - N
      - 
    * - :func:`equals`
      - Y
      - 
    * - :func:`factorize`
      - P
      - ``use_na_sentinel``
    * - :func:`fillna`
      - P
      - ``downcast``
    * - format
      - N
      - 
    * - get_indexer
      - N
      - 
    * - get_indexer_for
      - N
      - 
    * - get_indexer_non_unique
      - N
      - 
    * - :func:`get_level_values`
      - Y
      - 
    * - get_loc
      - N
      - 
    * - get_slice_bound
      - N
      - 
    * - get_value
      - N
      - 
    * - groupby
      - N
      - 
    * - :func:`holds_integer`
      - Y
      - 
    * - :func:`identical`
      - Y
      - 
    * - :func:`insert`
      - Y
      - 
    * - :func:`intersection`
      - P
      - ``sort``
    * - is\_
      - N
      - 
    * - :func:`is_boolean`
      - Y
      - 
    * - :func:`is_categorical`
      - Y
      - 
    * - :func:`is_floating`
      - Y
      - 
    * - :func:`is_integer`
      - Y
      - 
    * - :func:`is_interval`
      - Y
      - 
    * - is_mixed
      - N
      - 
    * - :func:`is_numeric`
      - Y
      - 
    * - :func:`is_object`
      - Y
      - 
    * - :func:`is_type_compatible`
      - Y
      - 
    * - :func:`isin`
      - P
      - ``level``
    * - :func:`isna`
      - Y
      - 
    * - :func:`isnull`
      - Y
      - 
    * - :func:`item`
      - Y
      - 
    * - join
      - N
      - 
    * - :func:`map`
      - Y
      - 
    * - :func:`max`
      - P
      - ``axis`` , ``skipna``
    * - memory_usage
      - N
      - 
    * - :func:`min`
      - P
      - ``axis`` , ``skipna``
    * - :func:`notna`
      - Y
      - 
    * - :func:`notnull`
      - Y
      - 
    * - :func:`nunique`
      - Y
      - 
    * - putmask
      - N
      - 
    * - ravel
      - N
      - 
    * - reindex
      - N
      - 
    * - :func:`rename`
      - Y
      - 
    * - :func:`repeat`
      - P
      - ``axis``
    * - searchsorted
      - N
      - 
    * - :func:`set_names`
      - Y
      - 
    * - set_value
      - N
      - 
    * - :func:`shift`
      - P
      - ``freq``
    * - slice_indexer
      - N
      - 
    * - slice_locs
      - N
      - 
    * - :func:`sort`
      - Y
      - 
    * - :func:`sort_values`
      - P
      - ``key`` , ``na_position``
    * - sortlevel
      - N
      - 
    * - :func:`symmetric_difference`
      - Y
      - 
    * - :func:`take`
      - P
      - ``allow_fill`` , ``axis`` , ``fill_value``
    * - to_flat_index
      - N
      - 
    * - :func:`to_frame`
      - Y
      - 
    * - :func:`to_list`
      - Y
      - 
    * - to_native_types
      - N
      - 
    * - :func:`to_numpy`
      - P
      - ``na_value``
    * - :func:`to_series`
      - P
      - ``index``
    * - :func:`tolist`
      - Y
      - 
    * - :func:`transpose`
      - Y
      - 
    * - :func:`union`
      - Y
      - 
    * - :func:`unique`
      - Y
      - 
    * - :func:`value_counts`
      - Y
      - 
    * - :func:`view`
      - Y
      - 
    * - where
      - N
      - 

MultiIndex API
----------------------------------------------------------------------------------------------------
.. currentmodule:: pyspark.pandas.MultiIndex

.. list-table::
    :header-rows: 1

    * - API
      - Implemented
      - Missing parameters
    * - :func:`all`
      - Y
      - 
    * - :func:`any`
      - Y
      - 
    * - :func:`append`
      - Y
      - 
    * - :func:`argmax`
      - P
      - ``axis`` , ``skipna``
    * - :func:`argmin`
      - P
      - ``axis`` , ``skipna``
    * - argsort
      - N
      - 
    * - :func:`asof`
      - Y
      - 
    * - asof_locs
      - N
      - 
    * - :func:`astype`
      - P
      - ``copy``
    * - :func:`copy`
      - P
      - ``codes`` , ``dtype`` , ``levels`` , ``name`` , ``names``
    * - :func:`delete`
      - Y
      - 
    * - :func:`difference`
      - Y
      - 
    * - :func:`drop`
      - P
      - ``errors``
    * - :func:`drop_duplicates`
      - Y
      - 
    * - :func:`droplevel`
      - Y
      - 
    * - :func:`dropna`
      - Y
      - 
    * - duplicated
      - N
      - 
    * - :func:`equal_levels`
      - Y
      - 
    * - :func:`equals`
      - Y
      - 
    * - :func:`factorize`
      - P
      - ``use_na_sentinel``
    * - :func:`fillna`
      - P
      - ``downcast``
    * - format
      - N
      - 
    * - get_indexer
      - N
      - 
    * - get_indexer_for
      - N
      - 
    * - get_indexer_non_unique
      - N
      - 
    * - :func:`get_level_values`
      - Y
      - 
    * - get_loc
      - N
      - 
    * - get_loc_level
      - N
      - 
    * - get_locs
      - N
      - 
    * - get_slice_bound
      - N
      - 
    * - get_value
      - N
      - 
    * - groupby
      - N
      - 
    * - :func:`holds_integer`
      - Y
      - 
    * - :func:`identical`
      - Y
      - 
    * - :func:`insert`
      - Y
      - 
    * - :func:`intersection`
      - P
      - ``sort``
    * - is\_
      - N
      - 
    * - :func:`is_boolean`
      - Y
      - 
    * - :func:`is_categorical`
      - Y
      - 
    * - :func:`is_floating`
      - Y
      - 
    * - :func:`is_integer`
      - Y
      - 
    * - :func:`is_interval`
      - Y
      - 
    * - is_lexsorted
      - N
      - 
    * - is_mixed
      - N
      - 
    * - :func:`is_numeric`
      - Y
      - 
    * - :func:`is_object`
      - Y
      - 
    * - :func:`is_type_compatible`
      - Y
      - 
    * - :func:`isin`
      - P
      - ``level``
    * - :func:`isna`
      - Y
      - 
    * - :func:`isnull`
      - Y
      - 
    * - :func:`item`
      - Y
      - 
    * - join
      - N
      - 
    * - :func:`map`
      - Y
      - 
    * - :func:`max`
      - P
      - ``axis`` , ``skipna``
    * - memory_usage
      - N
      - 
    * - :func:`min`
      - P
      - ``axis`` , ``skipna``
    * - :func:`notna`
      - Y
      - 
    * - :func:`notnull`
      - Y
      - 
    * - :func:`nunique`
      - Y
      - 
    * - putmask
      - N
      - 
    * - ravel
      - N
      - 
    * - reindex
      - N
      - 
    * - remove_unused_levels
      - N
      - 
    * - :func:`rename`
      - P
      - ``level`` , ``names``
    * - reorder_levels
      - N
      - 
    * - :func:`repeat`
      - P
      - ``axis``
    * - searchsorted
      - N
      - 
    * - set_codes
      - N
      - 
    * - set_levels
      - N
      - 
    * - :func:`set_names`
      - Y
      - 
    * - set_value
      - N
      - 
    * - :func:`shift`
      - P
      - ``freq``
    * - slice_indexer
      - N
      - 
    * - slice_locs
      - N
      - 
    * - :func:`sort`
      - Y
      - 
    * - :func:`sort_values`
      - P
      - ``key`` , ``na_position``
    * - sortlevel
      - N
      - 
    * - :func:`swaplevel`
      - Y
      - 
    * - :func:`symmetric_difference`
      - Y
      - 
    * - :func:`take`
      - P
      - ``allow_fill`` , ``axis`` , ``fill_value``
    * - to_flat_index
      - N
      - 
    * - :func:`to_frame`
      - P
      - ``allow_duplicates``
    * - :func:`to_list`
      - Y
      - 
    * - to_native_types
      - N
      - 
    * - :func:`to_numpy`
      - P
      - ``na_value``
    * - :func:`to_series`
      - P
      - ``index``
    * - :func:`tolist`
      - Y
      - 
    * - :func:`transpose`
      - Y
      - 
    * - truncate
      - N
      - 
    * - :func:`union`
      - Y
      - 
    * - :func:`unique`
      - Y
      - 
    * - :func:`value_counts`
      - Y
      - 
    * - :func:`view`
      - Y
      - 
    * - where
      - N
      - 

Series API
----------------------------------------------------------------------------------------------------
.. currentmodule:: pyspark.pandas.Series

.. list-table::
    :header-rows: 1

    * - API
      - Implemented
      - Missing parameters
    * - :func:`abs`
      - Y
      - 
    * - :func:`add`
      - P
      - ``axis`` , ``fill_value`` , ``level``
    * - :func:`add_prefix`
      - Y
      - 
    * - :func:`add_suffix`
      - Y
      - 
    * - :func:`agg`
      - P
      - ``axis``
    * - :func:`aggregate`
      - P
      - ``axis``
    * - :func:`align`
      - P
      - ``broadcast_axis`` , ``fill_axis`` , ``fill_value`` , ``level`` , ``limit`` and more. See the `pandas.Series.align <https://pandas.pydata.org/docs/reference/api/pandas.Series.align.html>`__ and `pyspark.pandas.Series.align <https://spark.apache.org/docs/latest/api/python/reference/pyspark.pandas/api/pyspark.pandas.Series.align.html>`__ for detail.
    * - :func:`all`
      - P
      - ``bool_only`` , ``level``
    * - :func:`any`
      - P
      - ``bool_only`` , ``level`` , ``skipna``
    * - :func:`append`
      - Y
      - 
    * - :func:`apply`
      - P
      - ``convert_dtype``
    * - :func:`argmax`
      - Y
      - 
    * - :func:`argmin`
      - Y
      - 
    * - :func:`argsort`
      - P
      - ``axis`` , ``kind`` , ``order``
    * - asfreq
      - N
      - 
    * - :func:`asof`
      - P
      - ``subset``
    * - :func:`astype`
      - P
      - ``copy`` , ``errors``
    * - :func:`at_time`
      - Y
      - 
    * - :func:`autocorr`
      - Y
      - 
    * - :func:`backfill`
      - P
      - ``downcast``
    * - :func:`between`
      - Y
      - 
    * - :func:`between_time`
      - P
      - ``inclusive``
    * - :func:`bfill`
      - P
      - ``downcast``
    * - :func:`bool`
      - Y
      - 
    * - :func:`clip`
      - P
      - ``axis``
    * - combine
      - N
      - 
    * - :func:`combine_first`
      - Y
      - 
    * - :func:`compare`
      - P
      - ``align_axis`` , ``result_names``
    * - convert_dtypes
      - N
      - 
    * - :func:`copy`
      - Y
      - 
    * - :func:`corr`
      - Y
      - 
    * - :func:`count`
      - P
      - ``level``
    * - :func:`cov`
      - Y
      - 
    * - :func:`cummax`
      - P
      - ``axis``
    * - :func:`cummin`
      - P
      - ``axis``
    * - :func:`cumprod`
      - P
      - ``axis``
    * - :func:`cumsum`
      - P
      - ``axis``
    * - :func:`describe`
      - P
      - ``datetime_is_numeric`` , ``exclude`` , ``include``
    * - :func:`diff`
      - Y
      - 
    * - :func:`div`
      - P
      - ``axis`` , ``fill_value`` , ``level``
    * - :func:`divide`
      - P
      - ``axis`` , ``fill_value`` , ``level``
    * - :func:`divmod`
      - P
      - ``axis`` , ``fill_value`` , ``level``
    * - :func:`dot`
      - Y
      - 
    * - :func:`drop`
      - P
      - ``axis`` , ``errors``
    * - :func:`drop_duplicates`
      - Y
      - 
    * - :func:`droplevel`
      - P
      - ``axis``
    * - :func:`dropna`
      - P
      - ``how``
    * - :func:`duplicated`
      - Y
      - 
    * - :func:`eq`
      - P
      - ``axis`` , ``fill_value`` , ``level``
    * - :func:`equals`
      - Y
      - 
    * - :func:`ewm`
      - P
      - ``adjust`` , ``axis`` , ``method`` , ``times``
    * - :func:`expanding`
      - P
      - ``axis`` , ``center`` , ``method``
    * - :func:`explode`
      - P
      - ``ignore_index``
    * - :func:`factorize`
      - P
      - ``use_na_sentinel``
    * - :func:`ffill`
      - P
      - ``downcast``
    * - :func:`fillna`
      - P
      - ``downcast``
    * - :func:`filter`
      - Y
      - 
    * - :func:`first`
      - Y
      - 
    * - :func:`first_valid_index`
      - Y
      - 
    * - :func:`floordiv`
      - P
      - ``axis`` , ``fill_value`` , ``level``
    * - :func:`ge`
      - P
      - ``axis`` , ``fill_value`` , ``level``
    * - :func:`get`
      - Y
      - 
    * - :func:`groupby`
      - P
      - ``group_keys`` , ``level`` , ``observed`` , ``sort`` , ``squeeze``
    * - :func:`gt`
      - P
      - ``axis`` , ``fill_value`` , ``level``
    * - :func:`head`
      - Y
      - 
    * - :func:`hist`
      - P
      - ``ax`` , ``backend`` , ``by`` , ``figsize`` , ``grid`` and more. See the `pandas.Series.hist <https://pandas.pydata.org/docs/reference/api/pandas.Series.hist.html>`__ and `pyspark.pandas.Series.hist <https://spark.apache.org/docs/latest/api/python/reference/pyspark.pandas/api/pyspark.pandas.Series.hist.html>`__ for detail.
    * - :func:`idxmax`
      - P
      - ``axis``
    * - :func:`idxmin`
      - P
      - ``axis``
    * - infer_objects
      - N
      - 
    * - info
      - N
      - 
    * - :func:`interpolate`
      - P
      - ``axis`` , ``downcast`` , ``inplace``
    * - :func:`isin`
      - Y
      - 
    * - :func:`isna`
      - Y
      - 
    * - :func:`isnull`
      - Y
      - 
    * - :func:`item`
      - Y
      - 
    * - :func:`items`
      - Y
      - 
    * - :func:`iteritems`
      - Y
      - 
    * - :func:`keys`
      - Y
      - 
    * - :func:`kurt`
      - P
      - ``level``
    * - :func:`kurtosis`
      - P
      - ``level``
    * - :func:`last`
      - Y
      - 
    * - :func:`last_valid_index`
      - Y
      - 
    * - :func:`le`
      - P
      - ``axis`` , ``fill_value`` , ``level``
    * - :func:`lt`
      - P
      - ``axis`` , ``fill_value`` , ``level``
    * - :func:`mad`
      - P
      - ``axis`` , ``level`` , ``skipna``
    * - :func:`map`
      - Y
      - 
    * - :func:`mask`
      - P
      - ``axis`` , ``errors`` , ``inplace`` , ``level`` , ``try_cast``
    * - :func:`max`
      - P
      - ``level``
    * - :func:`mean`
      - P
      - ``level``
    * - :func:`median`
      - P
      - ``level``
    * - memory_usage
      - N
      - 
    * - :func:`min`
      - P
      - ``level``
    * - :func:`mod`
      - P
      - ``axis`` , ``fill_value`` , ``level``
    * - :func:`mode`
      - Y
      - 
    * - :func:`mul`
      - P
      - ``axis`` , ``fill_value`` , ``level``
    * - :func:`multiply`
      - P
      - ``axis`` , ``fill_value`` , ``level``
    * - :func:`ne`
      - P
      - ``axis`` , ``fill_value`` , ``level``
    * - :func:`nlargest`
      - P
      - ``keep``
    * - :func:`notna`
      - Y
      - 
    * - :func:`notnull`
      - Y
      - 
    * - :func:`nsmallest`
      - P
      - ``keep``
    * - :func:`nunique`
      - Y
      - 
    * - :func:`pad`
      - P
      - ``downcast``
    * - :func:`pct_change`
      - P
      - ``fill_method`` , ``freq`` , ``limit``
    * - :func:`pipe`
      - Y
      - 
    * - :func:`pop`
      - Y
      - 
    * - :func:`pow`
      - P
      - ``axis`` , ``fill_value`` , ``level``
    * - :func:`prod`
      - P
      - ``level``
    * - :func:`product`
      - P
      - ``level``
    * - :func:`quantile`
      - P
      - ``interpolation``
    * - :func:`radd`
      - P
      - ``axis`` , ``fill_value`` , ``level``
    * - :func:`rank`
      - P
      - ``axis`` , ``na_option`` , ``pct``
    * - ravel
      - N
      - 
    * - :func:`rdiv`
      - P
      - ``axis`` , ``fill_value`` , ``level``
    * - :func:`rdivmod`
      - P
      - ``axis`` , ``fill_value`` , ``level``
    * - :func:`reindex`
      - Y
      - 
    * - :func:`reindex_like`
      - P
      - ``copy`` , ``limit`` , ``method`` , ``tolerance``
    * - :func:`rename`
      - P
      - ``axis`` , ``copy`` , ``errors`` , ``inplace`` , ``level``
    * - :func:`rename_axis`
      - Y
      - 
    * - reorder_levels
      - N
      - 
    * - :func:`repeat`
      - P
      - ``axis``
    * - :func:`replace`
      - P
      - ``inplace`` , ``limit`` , ``method``
    * - :func:`resample`
      - P
      - ``axis`` , ``base`` , ``convention`` , ``group_keys`` , ``kind`` and more. See the `pandas.Series.resample <https://pandas.pydata.org/docs/reference/api/pandas.Series.resample.html>`__ and `pyspark.pandas.Series.resample <https://spark.apache.org/docs/latest/api/python/reference/pyspark.pandas/api/pyspark.pandas.Series.resample.html>`__ for detail.
    * - :func:`reset_index`
      - P
      - ``allow_duplicates``
    * - :func:`rfloordiv`
      - P
      - ``axis`` , ``fill_value`` , ``level``
    * - :func:`rmod`
      - P
      - ``axis`` , ``fill_value`` , ``level``
    * - :func:`rmul`
      - P
      - ``axis`` , ``fill_value`` , ``level``
    * - :func:`rolling`
      - P
      - ``axis`` , ``center`` , ``closed`` , ``method`` , ``on`` and more. See the `pandas.Series.rolling <https://pandas.pydata.org/docs/reference/api/pandas.Series.rolling.html>`__ and `pyspark.pandas.Series.rolling <https://spark.apache.org/docs/latest/api/python/reference/pyspark.pandas/api/pyspark.pandas.Series.rolling.html>`__ for detail.
    * - :func:`round`
      - Y
      - 
    * - :func:`rpow`
      - P
      - ``axis`` , ``fill_value`` , ``level``
    * - :func:`rsub`
      - P
      - ``axis`` , ``fill_value`` , ``level``
    * - :func:`rtruediv`
      - P
      - ``axis`` , ``fill_value`` , ``level``
    * - :func:`sample`
      - P
      - ``axis`` , ``weights``
    * - :func:`searchsorted`
      - P
      - ``sorter``
    * - :func:`sem`
      - P
      - ``level``
    * - set_axis
      - N
      - 
    * - set_flags
      - N
      - 
    * - :func:`shift`
      - P
      - ``axis`` , ``freq``
    * - :func:`skew`
      - P
      - ``level``
    * - slice_shift
      - N
      - 
    * - :func:`sort_index`
      - P
      - ``key`` , ``sort_remaining``
    * - :func:`sort_values`
      - P
      - ``axis`` , ``key`` , ``kind``
    * - :func:`squeeze`
      - Y
      - 
    * - :func:`std`
      - P
      - ``level``
    * - :func:`sub`
      - P
      - ``axis`` , ``fill_value`` , ``level``
    * - :func:`subtract`
      - P
      - ``axis`` , ``fill_value`` , ``level``
    * - :func:`sum`
      - P
      - ``level``
    * - :func:`swapaxes`
      - P
      - ``axis1`` , ``axis2``
    * - :func:`swaplevel`
      - Y
      - 
    * - :func:`tail`
      - Y
      - 
    * - :func:`take`
      - P
      - ``axis`` , ``is_copy``
    * - :func:`to_clipboard`
      - Y
      - 
    * - :func:`to_csv`
      - P
      - ``chunksize`` , ``compression`` , ``decimal`` , ``doublequote`` , ``encoding`` and more. See the `pandas.Series.to_csv <https://pandas.pydata.org/docs/reference/api/pandas.Series.to_csv.html>`__ and `pyspark.pandas.Series.to_csv <https://spark.apache.org/docs/latest/api/python/reference/pyspark.pandas/api/pyspark.pandas.Series.to_csv.html>`__ for detail.
    * - :func:`to_dict`
      - Y
      - 
    * - :func:`to_excel`
      - P
      - ``storage_options``
    * - :func:`to_frame`
      - Y
      - 
    * - to_hdf
      - N
      - 
    * - :func:`to_json`
      - P
      - ``date_format`` , ``date_unit`` , ``default_handler`` , ``double_precision`` , ``force_ascii`` and more. See the `pandas.Series.to_json <https://pandas.pydata.org/docs/reference/api/pandas.Series.to_json.html>`__ and `pyspark.pandas.Series.to_json <https://spark.apache.org/docs/latest/api/python/reference/pyspark.pandas/api/pyspark.pandas.Series.to_json.html>`__ for detail.
    * - :func:`to_latex`
      - P
      - ``caption`` , ``label`` , ``position``
    * - :func:`to_list`
      - Y
      - 
    * - :func:`to_markdown`
      - P
      - ``index`` , ``storage_options``
    * - :func:`to_numpy`
      - P
      - ``copy`` , ``dtype`` , ``na_value``
    * - to_period
      - N
      - 
    * - to_pickle
      - N
      - 
    * - to_sql
      - N
      - 
    * - :func:`to_string`
      - P
      - ``min_rows``
    * - to_timestamp
      - N
      - 
    * - to_xarray
      - N
      - 
    * - :func:`tolist`
      - Y
      - 
    * - :func:`transform`
      - Y
      - 
    * - :func:`transpose`
      - Y
      - 
    * - :func:`truediv`
      - P
      - ``axis`` , ``fill_value`` , ``level``
    * - :func:`truncate`
      - Y
      - 
    * - tshift
      - N
      - 
    * - tz_convert
      - N
      - 
    * - tz_localize
      - N
      - 
    * - :func:`unique`
      - Y
      - 
    * - :func:`unstack`
      - P
      - ``fill_value``
    * - :func:`update`
      - Y
      - 
    * - :func:`value_counts`
      - Y
      - 
    * - :func:`var`
      - P
      - ``level`` , ``skipna``
    * - view
      - N
      - 
    * - :func:`where`
      - P
      - ``axis`` , ``errors`` , ``inplace`` , ``level`` , ``try_cast``
    * - :func:`xs`
      - P
      - ``axis`` , ``drop_level``

TimedeltaIndex API
----------------------------------------------------------------------------------------------------
.. currentmodule:: pyspark.pandas.TimedeltaIndex

.. list-table::
    :header-rows: 1

    * - API
      - Implemented
      - Missing parameters
    * - :func:`all`
      - Y
      - 
    * - :func:`any`
      - Y
      - 
    * - :func:`append`
      - Y
      - 
    * - :func:`argmax`
      - P
      - ``axis`` , ``skipna``
    * - :func:`argmin`
      - P
      - ``axis`` , ``skipna``
    * - argsort
      - N
      - 
    * - :func:`asof`
      - Y
      - 
    * - asof_locs
      - N
      - 
    * - :func:`astype`
      - P
      - ``copy``
    * - ceil
      - N
      - 
    * - :func:`copy`
      - P
      - ``dtype`` , ``names``
    * - :func:`delete`
      - Y
      - 
    * - :func:`difference`
      - Y
      - 
    * - :func:`drop`
      - P
      - ``errors``
    * - :func:`drop_duplicates`
      - Y
      - 
    * - :func:`droplevel`
      - Y
      - 
    * - :func:`dropna`
      - Y
      - 
    * - duplicated
      - N
      - 
    * - :func:`equals`
      - Y
      - 
    * - :func:`factorize`
      - P
      - ``use_na_sentinel``
    * - :func:`fillna`
      - P
      - ``downcast``
    * - floor
      - N
      - 
    * - format
      - N
      - 
    * - get_indexer
      - N
      - 
    * - get_indexer_for
      - N
      - 
    * - get_indexer_non_unique
      - N
      - 
    * - :func:`get_level_values`
      - Y
      - 
    * - get_loc
      - N
      - 
    * - get_slice_bound
      - N
      - 
    * - get_value
      - N
      - 
    * - groupby
      - N
      - 
    * - :func:`holds_integer`
      - Y
      - 
    * - :func:`identical`
      - Y
      - 
    * - :func:`insert`
      - Y
      - 
    * - :func:`intersection`
      - P
      - ``sort``
    * - is\_
      - N
      - 
    * - :func:`is_boolean`
      - Y
      - 
    * - :func:`is_categorical`
      - Y
      - 
    * - :func:`is_floating`
      - Y
      - 
    * - :func:`is_integer`
      - Y
      - 
    * - :func:`is_interval`
      - Y
      - 
    * - is_mixed
      - N
      - 
    * - :func:`is_numeric`
      - Y
      - 
    * - :func:`is_object`
      - Y
      - 
    * - :func:`is_type_compatible`
      - Y
      - 
    * - :func:`isin`
      - P
      - ``level``
    * - :func:`isna`
      - Y
      - 
    * - :func:`isnull`
      - Y
      - 
    * - :func:`item`
      - Y
      - 
    * - join
      - N
      - 
    * - :func:`map`
      - Y
      - 
    * - :func:`max`
      - P
      - ``axis`` , ``skipna``
    * - mean
      - N
      - 
    * - median
      - N
      - 
    * - memory_usage
      - N
      - 
    * - :func:`min`
      - P
      - ``axis`` , ``skipna``
    * - :func:`notna`
      - Y
      - 
    * - :func:`notnull`
      - Y
      - 
    * - :func:`nunique`
      - Y
      - 
    * - putmask
      - N
      - 
    * - ravel
      - N
      - 
    * - reindex
      - N
      - 
    * - :func:`rename`
      - Y
      - 
    * - :func:`repeat`
      - P
      - ``axis``
    * - round
      - N
      - 
    * - searchsorted
      - N
      - 
    * - :func:`set_names`
      - Y
      - 
    * - set_value
      - N
      - 
    * - :func:`shift`
      - P
      - ``freq``
    * - slice_indexer
      - N
      - 
    * - slice_locs
      - N
      - 
    * - :func:`sort`
      - Y
      - 
    * - :func:`sort_values`
      - P
      - ``key`` , ``na_position``
    * - sortlevel
      - N
      - 
    * - std
      - N
      - 
    * - sum
      - N
      - 
    * - :func:`symmetric_difference`
      - Y
      - 
    * - :func:`take`
      - P
      - ``allow_fill`` , ``axis`` , ``fill_value``
    * - to_flat_index
      - N
      - 
    * - :func:`to_frame`
      - Y
      - 
    * - :func:`to_list`
      - Y
      - 
    * - to_native_types
      - N
      - 
    * - :func:`to_numpy`
      - P
      - ``na_value``
    * - to_pytimedelta
      - N
      - 
    * - :func:`to_series`
      - P
      - ``index``
    * - :func:`tolist`
      - Y
      - 
    * - total_seconds
      - N
      - 
    * - :func:`transpose`
      - Y
      - 
    * - :func:`union`
      - Y
      - 
    * - :func:`unique`
      - Y
      - 
    * - :func:`value_counts`
      - Y
      - 
    * - :func:`view`
      - Y
      - 
    * - where
      - N
      - 

General Function API
----------------------------------------------------------------------------------------------------
.. currentmodule:: pyspark.pandas

.. list-table::
    :header-rows: 1

    * - API
      - Implemented
      - Missing parameters
    * - array
      - N
      - 
    * - bdate_range
      - N
      - 
    * - :func:`concat`
      - P
      - ``copy`` , ``keys`` , ``levels`` , ``names`` , ``verify_integrity``
    * - crosstab
      - N
      - 
    * - cut
      - N
      - 
    * - :func:`date_range`
      - P
      - ``inclusive``
    * - eval
      - N
      - 
    * - factorize
      - N
      - 
    * - from_dummies
      - N
      - 
    * - :func:`get_dummies`
      - Y
      - 
    * - infer_freq
      - N
      - 
    * - interval_range
      - N
      - 
    * - :func:`isna`
      - Y
      - 
    * - :func:`isnull`
      - Y
      - 
    * - json_normalize
      - N
      - 
    * - lreshape
      - N
      - 
    * - :func:`melt`
      - P
      - ``col_level`` , ``ignore_index``
    * - :func:`merge`
      - P
      - ``copy`` , ``indicator`` , ``left`` , ``sort`` , ``validate``
    * - :func:`merge_asof`
      - Y
      - 
    * - merge_ordered
      - N
      - 
    * - :func:`notna`
      - Y
      - 
    * - :func:`notnull`
      - Y
      - 
    * - period_range
      - N
      - 
    * - pivot
      - N
      - 
    * - pivot_table
      - N
      - 
    * - qcut
      - N
      - 
    * - :func:`read_clipboard`
      - Y
      - 
    * - :func:`read_csv`
      - P
      - ``cache_dates`` , ``chunksize`` , ``compression`` , ``converters`` , ``date_parser`` and more. See the `pandas.read_csv <https://pandas.pydata.org/docs/reference/api/pandas.read_csv.html>`__ and `pyspark.pandas.read_csv <https://spark.apache.org/docs/latest/api/python/reference/pyspark.pandas/api/pyspark.pandas.read_csv.html>`__ for detail.
    * - :func:`read_excel`
      - P
      - ``decimal`` , ``na_filter`` , ``storage_options``
    * - read_feather
      - N
      - 
    * - read_fwf
      - N
      - 
    * - read_gbq
      - N
      - 
    * - read_hdf
      - N
      - 
    * - :func:`read_html`
      - P
      - ``extract_links``
    * - :func:`read_json`
      - P
      - ``chunksize`` , ``compression`` , ``convert_axes`` , ``convert_dates`` , ``date_unit`` and more. See the `pandas.read_json <https://pandas.pydata.org/docs/reference/api/pandas.read_json.html>`__ and `pyspark.pandas.read_json <https://spark.apache.org/docs/latest/api/python/reference/pyspark.pandas/api/pyspark.pandas.read_json.html>`__ for detail.
    * - :func:`read_orc`
      - Y
      - 
    * - :func:`read_parquet`
      - P
      - ``engine`` , ``storage_options`` , ``use_nullable_dtypes``
    * - read_pickle
      - N
      - 
    * - read_sas
      - N
      - 
    * - read_spss
      - N
      - 
    * - :func:`read_sql`
      - P
      - ``chunksize`` , ``coerce_float`` , ``params`` , ``parse_dates``
    * - :func:`read_sql_query`
      - P
      - ``chunksize`` , ``coerce_float`` , ``dtype`` , ``params`` , ``parse_dates``
    * - :func:`read_sql_table`
      - P
      - ``chunksize`` , ``coerce_float`` , ``parse_dates``
    * - read_stata
      - N
      - 
    * - :func:`read_table`
      - P
      - ``cache_dates`` , ``chunksize`` , ``comment`` , ``compression`` , ``converters`` and more. See the `pandas.read_table <https://pandas.pydata.org/docs/reference/api/pandas.read_table.html>`__ and `pyspark.pandas.read_table <https://spark.apache.org/docs/latest/api/python/reference/pyspark.pandas/api/pyspark.pandas.read_table.html>`__ for detail.
    * - read_xml
      - N
      - 
    * - set_eng_float_format
      - N
      - 
    * - show_versions
      - N
      - 
    * - test
      - N
      - 
    * - :func:`timedelta_range`
      - Y
      - 
    * - :func:`to_datetime`
      - P
      - ``cache`` , ``dayfirst`` , ``exact`` , ``utc`` , ``yearfirst``
    * - :func:`to_numeric`
      - P
      - ``downcast``
    * - to_pickle
      - N
      - 
    * - :func:`to_timedelta`
      - Y
      - 
    * - unique
      - N
      - 
    * - value_counts
      - N
      - 
    * - wide_to_long
      - N
      - 

Expanding API
----------------------------------------------------------------------------------------------------
.. currentmodule:: pyspark.pandas.window.Expanding

.. list-table::
    :header-rows: 1

    * - API
      - Implemented
      - Missing parameters
    * - agg
      - N
      - 
    * - aggregate
      - N
      - 
    * - apply
      - N
      - 
    * - corr
      - N
      - 
    * - :func:`count`
      - P
      - ``numeric_only``
    * - cov
      - N
      - 
    * - :func:`kurt`
      - P
      - ``numeric_only``
    * - :func:`max`
      - P
      - ``engine`` , ``engine_kwargs`` , ``numeric_only``
    * - :func:`mean`
      - P
      - ``engine`` , ``engine_kwargs`` , ``numeric_only``
    * - median
      - N
      - 
    * - :func:`min`
      - P
      - ``engine`` , ``engine_kwargs`` , ``numeric_only``
    * - :func:`quantile`
      - P
      - ``interpolation`` , ``numeric_only``
    * - rank
      - N
      - 
    * - sem
      - N
      - 
    * - :func:`skew`
      - P
      - ``numeric_only``
    * - :func:`std`
      - P
      - ``ddof`` , ``engine`` , ``engine_kwargs`` , ``numeric_only``
    * - :func:`sum`
      - P
      - ``engine`` , ``engine_kwargs`` , ``numeric_only``
    * - validate
      - N
      - 
    * - :func:`var`
      - P
      - ``ddof`` , ``engine`` , ``engine_kwargs`` , ``numeric_only``

ExpandingGroupby API
----------------------------------------------------------------------------------------------------
.. currentmodule:: pyspark.pandas.window.ExpandingGroupby

.. list-table::
    :header-rows: 1

    * - API
      - Implemented
      - Missing parameters
    * - agg
      - N
      - 
    * - aggregate
      - N
      - 
    * - apply
      - N
      - 
    * - corr
      - N
      - 
    * - :func:`count`
      - P
      - ``numeric_only``
    * - cov
      - N
      - 
    * - :func:`kurt`
      - P
      - ``numeric_only``
    * - :func:`max`
      - P
      - ``engine`` , ``engine_kwargs`` , ``numeric_only``
    * - :func:`mean`
      - P
      - ``engine`` , ``engine_kwargs`` , ``numeric_only``
    * - median
      - N
      - 
    * - :func:`min`
      - P
      - ``engine`` , ``engine_kwargs`` , ``numeric_only``
    * - :func:`quantile`
      - P
      - ``interpolation`` , ``numeric_only``
    * - rank
      - N
      - 
    * - sem
      - N
      - 
    * - :func:`skew`
      - P
      - ``numeric_only``
    * - :func:`std`
      - P
      - ``ddof`` , ``engine`` , ``engine_kwargs`` , ``numeric_only``
    * - :func:`sum`
      - P
      - ``engine`` , ``engine_kwargs`` , ``numeric_only``
    * - validate
      - N
      - 
    * - :func:`var`
      - P
      - ``ddof`` , ``engine`` , ``engine_kwargs`` , ``numeric_only``

Rolling API
----------------------------------------------------------------------------------------------------
.. currentmodule:: pyspark.pandas.window.Rolling

.. list-table::
    :header-rows: 1

    * - API
      - Implemented
      - Missing parameters
    * - agg
      - N
      - 
    * - aggregate
      - N
      - 
    * - apply
      - N
      - 
    * - corr
      - N
      - 
    * - :func:`count`
      - P
      - ``numeric_only``
    * - cov
      - N
      - 
    * - :func:`kurt`
      - P
      - ``numeric_only``
    * - :func:`max`
      - P
      - ``engine`` , ``engine_kwargs`` , ``numeric_only``
    * - :func:`mean`
      - P
      - ``engine`` , ``engine_kwargs`` , ``numeric_only``
    * - median
      - N
      - 
    * - :func:`min`
      - P
      - ``engine`` , ``engine_kwargs`` , ``numeric_only``
    * - :func:`quantile`
      - P
      - ``interpolation`` , ``numeric_only``
    * - rank
      - N
      - 
    * - sem
      - N
      - 
    * - :func:`skew`
      - P
      - ``numeric_only``
    * - :func:`std`
      - P
      - ``ddof`` , ``engine`` , ``engine_kwargs`` , ``numeric_only``
    * - :func:`sum`
      - P
      - ``engine`` , ``engine_kwargs`` , ``numeric_only``
    * - validate
      - N
      - 
    * - :func:`var`
      - P
      - ``ddof`` , ``engine`` , ``engine_kwargs`` , ``numeric_only``

RollingGroupby API
----------------------------------------------------------------------------------------------------
.. currentmodule:: pyspark.pandas.window.RollingGroupby

.. list-table::
    :header-rows: 1

    * - API
      - Implemented
      - Missing parameters
    * - agg
      - N
      - 
    * - aggregate
      - N
      - 
    * - apply
      - N
      - 
    * - corr
      - N
      - 
    * - :func:`count`
      - P
      - ``numeric_only``
    * - cov
      - N
      - 
    * - :func:`kurt`
      - P
      - ``numeric_only``
    * - :func:`max`
      - P
      - ``engine`` , ``engine_kwargs`` , ``numeric_only``
    * - :func:`mean`
      - P
      - ``engine`` , ``engine_kwargs`` , ``numeric_only``
    * - median
      - N
      - 
    * - :func:`min`
      - P
      - ``engine`` , ``engine_kwargs`` , ``numeric_only``
    * - :func:`quantile`
      - P
      - ``interpolation`` , ``numeric_only``
    * - rank
      - N
      - 
    * - sem
      - N
      - 
    * - :func:`skew`
      - P
      - ``numeric_only``
    * - :func:`std`
      - P
      - ``ddof`` , ``engine`` , ``engine_kwargs`` , ``numeric_only``
    * - :func:`sum`
      - P
      - ``engine`` , ``engine_kwargs`` , ``numeric_only``
    * - validate
      - N
      - 
    * - :func:`var`
      - P
      - ``ddof`` , ``engine`` , ``engine_kwargs`` , ``numeric_only``

Window API
----------------------------------------------------------------------------------------------------
.. currentmodule:: pyspark.pandas.window.Window

.. list-table::
    :header-rows: 1

    * - API
      - Implemented
      - Missing parameters
    * - agg
      - N
      - 
    * - aggregate
      - N
      - 
    * - mean
      - N
      - 
    * - std
      - N
      - 
    * - sum
      - N
      - 
    * - validate
      - N
      - 
    * - var
      - N
      - 

DataFrameGroupBy API
----------------------------------------------------------------------------------------------------
.. currentmodule:: pyspark.pandas.groupby.DataFrameGroupBy

.. list-table::
    :header-rows: 1

    * - API
      - Implemented
      - Missing parameters
    * - :func:`agg`
      - P
      - ``engine`` , ``engine_kwargs`` , ``func``
    * - :func:`aggregate`
      - P
      - ``engine`` , ``engine_kwargs`` , ``func``
    * - :func:`all`
      - Y
      - 
    * - :func:`any`
      - P
      - ``skipna``
    * - :func:`apply`
      - Y
      - 
    * - :func:`backfill`
      - Y
      - 
    * - :func:`bfill`
      - Y
      - 
    * - boxplot
      - N
      - 
    * - :func:`count`
      - Y
      - 
    * - :func:`cumcount`
      - Y
      - 
    * - :func:`cummax`
      - P
      - ``axis`` , ``numeric_only``
    * - :func:`cummin`
      - P
      - ``axis`` , ``numeric_only``
    * - :func:`cumprod`
      - P
      - ``axis``
    * - :func:`cumsum`
      - P
      - ``axis``
    * - :func:`describe`
      - Y
      - 
    * - :func:`diff`
      - P
      - ``axis``
    * - :func:`ewm`
      - Y
      - 
    * - :func:`expanding`
      - Y
      - 
    * - :func:`ffill`
      - Y
      - 
    * - :func:`filter`
      - P
      - ``dropna``
    * - :func:`first`
      - Y
      - 
    * - :func:`get_group`
      - P
      - ``obj``
    * - :func:`head`
      - Y
      - 
    * - :func:`idxmax`
      - P
      - ``axis`` , ``numeric_only``
    * - :func:`idxmin`
      - P
      - ``axis`` , ``numeric_only``
    * - :func:`last`
      - Y
      - 
    * - :func:`max`
      - P
      - ``engine`` , ``engine_kwargs``
    * - :func:`mean`
      - P
      - ``engine`` , ``engine_kwargs``
    * - :func:`median`
      - Y
      - 
    * - :func:`min`
      - P
      - ``engine`` , ``engine_kwargs``
    * - ngroup
      - N
      - 
    * - :func:`nunique`
      - Y
      - 
    * - ohlc
      - N
      - 
    * - :func:`pad`
      - Y
      - 
    * - pct_change
      - N
      - 
    * - pipe
      - N
      - 
    * - :func:`prod`
      - Y
      - 
    * - :func:`quantile`
      - P
      - ``interpolation`` , ``numeric_only``
    * - :func:`rank`
      - P
      - ``axis`` , ``na_option`` , ``pct``
    * - resample
      - N
      - 
    * - :func:`rolling`
      - Y
      - 
    * - sample
      - N
      - 
    * - :func:`sem`
      - P
      - ``numeric_only``
    * - :func:`shift`
      - P
      - ``axis`` , ``freq``
    * - :func:`size`
      - Y
      - 
    * - :func:`std`
      - P
      - ``engine`` , ``engine_kwargs`` , ``numeric_only``
    * - :func:`sum`
      - P
      - ``engine`` , ``engine_kwargs``
    * - :func:`tail`
      - Y
      - 
    * - :func:`transform`
      - P
      - ``engine`` , ``engine_kwargs``
    * - value_counts
      - N
      - 
    * - :func:`var`
      - P
      - ``engine`` , ``engine_kwargs`` , ``numeric_only``

GroupBy API
----------------------------------------------------------------------------------------------------
.. currentmodule:: pyspark.pandas.groupby.GroupBy

.. list-table::
    :header-rows: 1

    * - API
      - Implemented
      - Missing parameters
    * - :func:`agg`
      - P
      - ``func``
    * - :func:`aggregate`
      - P
      - ``func``
    * - :func:`all`
      - Y
      - 
    * - :func:`any`
      - P
      - ``skipna``
    * - :func:`apply`
      - Y
      - 
    * - :func:`backfill`
      - Y
      - 
    * - :func:`bfill`
      - Y
      - 
    * - :func:`count`
      - Y
      - 
    * - :func:`cumcount`
      - Y
      - 
    * - :func:`cummax`
      - P
      - ``axis`` , ``numeric_only``
    * - :func:`cummin`
      - P
      - ``axis`` , ``numeric_only``
    * - :func:`cumprod`
      - P
      - ``axis``
    * - :func:`cumsum`
      - P
      - ``axis``
    * - describe
      - N
      - 
    * - :func:`diff`
      - P
      - ``axis``
    * - :func:`ewm`
      - Y
      - 
    * - :func:`expanding`
      - Y
      - 
    * - :func:`ffill`
      - Y
      - 
    * - :func:`first`
      - Y
      - 
    * - :func:`get_group`
      - P
      - ``obj``
    * - :func:`head`
      - Y
      - 
    * - :func:`last`
      - Y
      - 
    * - :func:`max`
      - P
      - ``engine`` , ``engine_kwargs``
    * - :func:`mean`
      - P
      - ``engine`` , ``engine_kwargs``
    * - :func:`median`
      - Y
      - 
    * - :func:`min`
      - P
      - ``engine`` , ``engine_kwargs``
    * - ngroup
      - N
      - 
    * - ohlc
      - N
      - 
    * - :func:`pad`
      - Y
      - 
    * - pct_change
      - N
      - 
    * - pipe
      - N
      - 
    * - :func:`prod`
      - Y
      - 
    * - :func:`quantile`
      - P
      - ``interpolation`` , ``numeric_only``
    * - :func:`rank`
      - P
      - ``axis`` , ``na_option`` , ``pct``
    * - resample
      - N
      - 
    * - :func:`rolling`
      - Y
      - 
    * - sample
      - N
      - 
    * - :func:`sem`
      - P
      - ``numeric_only``
    * - :func:`shift`
      - P
      - ``axis`` , ``freq``
    * - :func:`size`
      - Y
      - 
    * - :func:`std`
      - P
      - ``engine`` , ``engine_kwargs`` , ``numeric_only``
    * - :func:`sum`
      - P
      - ``engine`` , ``engine_kwargs``
    * - :func:`tail`
      - Y
      - 
    * - :func:`var`
      - P
      - ``engine`` , ``engine_kwargs`` , ``numeric_only``

SeriesGroupBy API
----------------------------------------------------------------------------------------------------
.. currentmodule:: pyspark.pandas.groupby.SeriesGroupBy

.. list-table::
    :header-rows: 1

    * - API
      - Implemented
      - Missing parameters
    * - :func:`agg`
      - P
      - ``engine`` , ``engine_kwargs`` , ``func``
    * - :func:`aggregate`
      - P
      - ``engine`` , ``engine_kwargs`` , ``func``
    * - :func:`all`
      - Y
      - 
    * - :func:`any`
      - P
      - ``skipna``
    * - :func:`apply`
      - Y
      - 
    * - :func:`backfill`
      - Y
      - 
    * - :func:`bfill`
      - Y
      - 
    * - :func:`count`
      - Y
      - 
    * - :func:`cumcount`
      - Y
      - 
    * - :func:`cummax`
      - P
      - ``axis`` , ``numeric_only``
    * - :func:`cummin`
      - P
      - ``axis`` , ``numeric_only``
    * - :func:`cumprod`
      - P
      - ``axis``
    * - :func:`cumsum`
      - P
      - ``axis``
    * - describe
      - N
      - 
    * - :func:`diff`
      - P
      - ``axis``
    * - :func:`ewm`
      - Y
      - 
    * - :func:`expanding`
      - Y
      - 
    * - :func:`ffill`
      - Y
      - 
    * - :func:`filter`
      - P
      - ``dropna``
    * - :func:`first`
      - Y
      - 
    * - :func:`get_group`
      - P
      - ``obj``
    * - :func:`head`
      - Y
      - 
    * - :func:`last`
      - Y
      - 
    * - :func:`max`
      - P
      - ``engine`` , ``engine_kwargs``
    * - :func:`mean`
      - P
      - ``engine`` , ``engine_kwargs``
    * - :func:`median`
      - Y
      - 
    * - :func:`min`
      - P
      - ``engine`` , ``engine_kwargs``
    * - ngroup
      - N
      - 
    * - :func:`nlargest`
      - P
      - ``keep``
    * - :func:`nsmallest`
      - P
      - ``keep``
    * - :func:`nunique`
      - Y
      - 
    * - ohlc
      - N
      - 
    * - :func:`pad`
      - Y
      - 
    * - pct_change
      - N
      - 
    * - pipe
      - N
      - 
    * - :func:`prod`
      - Y
      - 
    * - :func:`quantile`
      - P
      - ``interpolation`` , ``numeric_only``
    * - :func:`rank`
      - P
      - ``axis`` , ``na_option`` , ``pct``
    * - resample
      - N
      - 
    * - :func:`rolling`
      - Y
      - 
    * - sample
      - N
      - 
    * - :func:`sem`
      - P
      - ``numeric_only``
    * - :func:`shift`
      - P
      - ``axis`` , ``freq``
    * - :func:`size`
      - Y
      - 
    * - :func:`std`
      - P
      - ``engine`` , ``engine_kwargs`` , ``numeric_only``
    * - :func:`sum`
      - P
      - ``engine`` , ``engine_kwargs``
    * - :func:`tail`
      - Y
      - 
    * - :func:`transform`
      - P
      - ``engine`` , ``engine_kwargs``
    * - :func:`value_counts`
      - P
      - ``bins`` , ``normalize``
    * - :func:`var`
      - P
      - ``engine`` , ``engine_kwargs`` , ``numeric_only``

